[package]
name = "infinite-website"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
overflow-checks = false

[dependencies]
actix-web = "4.3.1"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.199", features = ["serde_derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.2", features = [
	"runtime-actix-native-tls",
	"sqlite",
] }
urlencoding = "2.1.2"

