[package]
name = "infinite-website"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
overflow-checks = false

[dependencies]
actix-web = "4.5.1"
ollama-rs = { version = "0.1.9", features = ["stream"]}
reqwest = "0.12.4"
sqlx = { version = "0.7.4", features = [
	"sqlite",
] }
urlencoding = "2.1.3"

